--- a/public/css/index.css
+++ b/public/css/index.css
@@ -689,8 +689,9 @@ h2{
 }
 
 /* Add rounded corners to the top left and the top right corner of the image */
-img {
+.card-e img {
     border-radius: 5px 5px 0 0;
+    overflow: hidden;
 }
 
 /* Create two unequal columns that floats next to each other */
