--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -47,252 +47,266 @@
 
 <body>
 
-<style>
-p {
-  text-align: center;
-  font-size: 20px;
-  margin-top:0px;
-}
-</style>
-</head>
+	<style>
+		p {
+		  text-align: center;
+		  font-size: 20px;
+		  margin-top:0px;
+		}
+	</style>
+	
+	<script>
+	function cancel() {
+		{{#if data}}
+			location.href = '/libraryAlt';
+		{{else}}
+			location.href = '/library';
+		{{/if}}	
+	}
+	</script>
 
-<body>
-<script>
-function cancel() {
-	{{#if data}}
-		location.href = '/libraryAlt';
-	{{else}}
-		location.href = '/library';
-	{{/if}}	
-}
-</script>
- <h3> Let's Start!</h3>
-<p id="currexercise"><p>
-<p id="currtime"></p>
+	<h3> Let's Start!</h3>
 
-<div id="outerProgressBar">
-	<div id="innerProgressBar">		  
-</div>
-<div class="custombtns">
+	<div class="card">
+		<!---CURRENT EXERCISE TIMER-->
+		<p id="currtime"></p>
+
+		<!---CURRENT EXERCISE NAME-->
+		<p id="currexercise"><p>
+
+		<!--PROGEESS BAR-->
+		<div id="outerProgressBar">
+			<div id="innerProgressBar">	
+			</div>	  
+		</div>
+
+		<!--UP NEXT EXERCISES-->
+		<p id="upnext"></p>
+	</div>
+
+
+
+	<div class="custombtns">
+		{{#if data}}
+		<button type="button" style="display: none" id="timerButtonStartOver" onclick="startover()" class="btn btn-secondary btn-lg">Restart</button>
+		{{/if}}
+		<button type="button" id="timerButtonPause" onclick="pause()" class="btn btn-secondary btn-lg">Pause</button>
+		<button type="button" id="timerButtonPlay" onclick="play()" style="display:none" class="btn btn-secondary btn-lg">Play</button>
+		<br>
+		<button type="button" id="timerButtonCancel" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
+	</div>
+	</br>
+	<!-- <small id="currsets"></small>
+	 -->
+	
+
+	<audio id="audio">
+		<source id="audio" type="audio/mpeg">
+	</audio>
+
+	<!--START OF SCRIPT-->
+	<script>
+	window.onload = initialize();
+
+	// TIMERS
+	var index = -1;
+
+	var origtt = -1;
+	var currtt = origtt;
+	var min;
+	var sec; 
+	var reps;
+	var increment = 1;
+	var lowbounds = -1;
+	var myVar;
+	var exercises;
+	var end = false;;
+	var data = false;
+
 	{{#if data}}
-	<button type="button" style="display: none" id="timerButtonStartOver" onclick="startover()" class="btn btn-secondary btn-lg">Restart</button>
+		data = true;
 	{{/if}}
-	<button type="button" id="timerButtonPause" onclick="pause()" class="btn btn-secondary btn-lg">Pause</button>
-	<button type="button" id="timerButtonPlay" onclick="play()" style="display:none" class="btn btn-secondary btn-lg">Play</button>
-	<button type="button" id="timerButtonCancel" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
-</div>
-</br>
-<!-- <small id="currsets"></small>
- -->
-<p id="upnext"></p>
-
-<audio id="audio">
-	<source id="audio" type="audio/mpeg">
-</audio>
-
-<!--START OF SCRIPT-->
-<script>
-window.onload = initialize();
-
-// TIMERS
-var index = -1;
-
-var origtt = -1;
-var currtt = origtt;
-var min;
-var sec; 
-var reps;
-var increment = 1;
-var lowbounds = -1;
-var myVar;
-var exercises;
-var end = false;;
-var data = false;
-
-{{#if data}}
-	data = true;
-{{/if}}
 
 
-function initialize(){
-	// var totalMin=0;
-	// var totalSec=0;
-	var exercises2 =[];
-	{{#each workout.exercises}}
-		var arr = [];
-		arr.push("{{this.exname}}");
-		arr.push({{this.min}});
-		arr.push({{this.sec}});
-		arr.push("{{this.sound}}");
-		exercises2.push(arr);
-	{{/each}}
+	function initialize(){
+		// var totalMin=0;
+		// var totalSec=0;
+		var exercises2 =[];
+		{{#each workout.exercises}}
+			var arr = [];
+			arr.push("{{this.exname}}");
+			arr.push({{this.min}});
+			arr.push({{this.sec}});
+			arr.push("{{this.sound}}");
+			exercises2.push(arr);
+		{{/each}}
 
-	if(exercises2.length == 0)
-	{
-		$("#currtime").hide();
-		$("#upnext").hide();
-		$("#currexercise").text("There are no exercises here!");
-
-		$("#timerButtonPause").hide();
-		$("#timerButtonStartOver").hide();
-		$("#timerButtonPlay").hide();
-		$("#timerButtonCancel").text("Exit");
-	}
-	else
-	{
-		reps = {{this.workout.repetitions}};
-		exercises = exercises2;
-
-		myVar =  setInterval(myTimer, 1000);
-	}
-}
-
-function myTimer() {
-	if(currtt == -1)
-	{
-		++index;
-
-		if(index != 0)
+		if(exercises2.length == 0)
 		{
-			playAudio();
-		}
-		if(index >= exercises.length)
-		{
-			end = true;
-			clearTimeout(myVar);
-		}
-		else{
-			if(+min + +sec == 0)
-			{
-				index++;
-				myTimer();
-			}
-			else
-			{
-				min = exercises[index][1];
-				sec = exercises[index][2];
-				currtt = min * 60 + sec;
-				origtt = currtt;
-				animate();
-			}
+			$("#currtime").hide();
+			$("#upnext").hide();
+			$("#currexercise").text("There are no exercises here!");
 
-
-		}
-
-	}
-
-    if(!end) {
-    	/* setting the page */
-    	document.getElementById("currexercise").innerHTML = "<b>" + exercises[index][0] + "</b>";
-
-
-
-	    document.getElementById("currtime").innerHTML = "<b>" + min + "</b> min " + "<b>" + sec + "</b> s </br>";
-	    // document.getElementById("currsets").innerHTML = "<b>" + reps + "</b> sets left";
-
-    	sec--
-    	if(sec < 0)
-    	{
-    		sec = 59;
-    		min--;
-    		if(min < 0)
-    			min = 0;
-    	}
-    	
-	    //setting new exercises
-	    var next ="";
-	    for(var i = index + 1; i < exercises.length; i++)
-	    {
-	    	if(i == index+1)
-	    	{
-	    		next += "<b>Up Next: </b><br>";
-	    	}
-	    	next += "\t" + exercises[i][0] + "<br>";
-	    }
-	    if(next == "")
-	    {
-	    	if(reps-1 == 1 && !data)
-	    		document.getElementById("upnext").innerHTML = "<b>" + (reps-1) + " set left!</b> ";
-	    	else if(reps-1 > 0 && !data)
-	    		document.getElementById("upnext").innerHTML = "<b>" + (reps-1) + " sets left!</b>";	    		
-	  		else
-	  			document.getElementById("upnext").innerHTML = "<b>Final Exercise!</b>";
-
-	  	}
-	  	else
-	  	{
-	  		document.getElementById("upnext").innerHTML = next;
-	  	}
-
-
-	    /* updating time */
-	  	currtt -= increment;
-	    animate();
-	}
-	else{
-		reps--;
-
-		if(reps > 0 && !data)
-		{
-			currtt = -1;
-			end = false;
-			index= -1;
-			myVar = setInterval(myTimer, 1000);
-		}
-		else{
-			document.getElementById("upnext").innerHTML = "<b>Done!</b>";
-			document.getElementById("timerButtonPause").style.display = "none";
-			document.getElementById("currtime").innerHTML = "<b>0</b> min " + "<b>0</b> s";
-			// document.getElementById("currsets").innerHTML = "<b>0</b> sets left";
-
-
-			if(data)
-			{
-				$("#timerButtonStartOver").show();
-			}
-			else
-			{
-				$("#timerButtonStartOver").hide();
-			}
+			$("#timerButtonPause").hide();
+			$("#timerButtonStartOver").hide();
+			$("#timerButtonPlay").hide();
 			$("#timerButtonCancel").text("Exit");
 		}
+		else
+		{
+			reps = {{this.workout.repetitions}};
+			exercises = exercises2;
+
+			myVar =  setInterval(myTimer, 1000);
+		}
 	}
-}
 
-function startover(){
-	window.location.reload();
-}
+	function myTimer() {
+		if(currtt == -1)
+		{
+			++index;
+
+			if(index != 0)
+			{
+				playAudio();
+			}
+			if(index >= exercises.length)
+			{
+				end = true;
+				clearTimeout(myVar);
+			}
+			else{
+				if(+min + +sec == 0)
+				{
+					index++;
+					myTimer();
+				}
+				else
+				{
+					min = exercises[index][1];
+					sec = exercises[index][2];
+					currtt = min * 60 + sec;
+					origtt = currtt;
+					animate();
+				}
 
 
-function pause(){
-	clearTimeout(myVar); 
-	$("#timerButtonPlay").show();
-	$("#timerButtonPause").hide();
-}
+			}
 
-function play(){
-	myVar = setInterval(myTimer, 1000);
-	$("#timerButtonPlay").hide();
-	$("#timerButtonPause").show();	 
-}
+		}
 
-//ANIMATION
-function animate(){
-    $("#innerProgressBar").animate({
-        width: (1-((currtt+1)/(origtt+1))) * 100 +'%'
-    });
-}
+	    if(!end) {
+	    	/* setting the page */
+	    	document.getElementById("currexercise").innerHTML = "<b>" + exercises[index][0] + "</b>";
 
 
 
-//audios
-var audio = document.getElementById("audio"); 
+		    document.getElementById("currtime").innerHTML = "<b>" + min + "</b> min " + "<b>" + sec + "</b> s </br>";
+		    // document.getElementById("currsets").innerHTML = "<b>" + reps + "</b> sets left";
 
-function playAudio() { 
-	document.getElementById("audio").src = "../audio/" + exercises[index-1][3] + ".mp3";
-    audio.play(); 
-} 
-</script>
+	    	sec--
+	    	if(sec < 0)
+	    	{
+	    		sec = 59;
+	    		min--;
+	    		if(min < 0)
+	    			min = 0;
+	    	}
+	    	
+		    //setting new exercises
+		    var next ="";
+		    for(var i = index + 1; i < exercises.length; i++)
+		    {
+		    	if(i == index+1)
+		    	{
+		    		next += "<b>Up Next: </b><br>";
+		    	}
+		    	next += "\t" + exercises[i][0] + "<br>";
+		    }
+		    if(next == "")
+		    {
+		    	if(reps-1 == 1 && !data)
+		    		document.getElementById("upnext").innerHTML = "<b>" + (reps-1) + " set left!</b> ";
+		    	else if(reps-1 > 0 && !data)
+		    		document.getElementById("upnext").innerHTML = "<b>" + (reps-1) + " sets left!</b>";	    		
+		  		else
+		  			document.getElementById("upnext").innerHTML = "<b>Final Exercise!</b>";
+
+		  	}
+		  	else
+		  	{
+		  		document.getElementById("upnext").innerHTML = next;
+		  	}
+
+
+		    /* updating time */
+		  	currtt -= increment;
+		    animate();
+		}
+		else{
+			reps--;
+
+			if(reps > 0 && !data)
+			{
+				currtt = -1;
+				end = false;
+				index= -1;
+				myVar = setInterval(myTimer, 1000);
+			}
+			else{
+				document.getElementById("upnext").innerHTML = "<b>Done!</b>";
+				document.getElementById("timerButtonPause").style.display = "none";
+				document.getElementById("currtime").innerHTML = "<b>0</b> min " + "<b>0</b> s";
+				// document.getElementById("currsets").innerHTML = "<b>0</b> sets left";
+
+
+				if(data)
+				{
+					$("#timerButtonStartOver").show();
+				}
+				else
+				{
+					$("#timerButtonStartOver").hide();
+				}
+				$("#timerButtonCancel").text("Exit");
+			}
+		}
+	}
+
+	function startover(){
+		window.location.reload();
+	}
+
+
+	function pause(){
+		clearTimeout(myVar); 
+		$("#timerButtonPlay").show();
+		$("#timerButtonPause").hide();
+	}
+
+	function play(){
+		myVar = setInterval(myTimer, 1000);
+		$("#timerButtonPlay").hide();
+		$("#timerButtonPause").show();	 
+	}
+
+	//ANIMATION
+	function animate(){
+	    $("#innerProgressBar").animate({
+	        width: (1-((currtt+1)/(origtt+1))) * 100 +'%'
+	    });
+	}
+
+
+
+	//audios
+	var audio = document.getElementById("audio"); 
+
+	function playAudio() { 
+		document.getElementById("audio").src = "../audio/" + exercises[index-1][3] + ".mp3";
+	    audio.play(); 
+	} 
+	</script>
 
 </body>
 </html>
