--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -76,7 +76,9 @@
 	<!-- <div class="userbackbtn">
 		<button class="btn" onclick="submitClicked()" id="submit">Back</button>
 	</div> -->
-
+	<a href="/">
+			<center><button type="button" class="logout-btn" id="logout-btn" onclick="logout()" >Logout</button></center>
+		</a>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
