--- a/public/css/info.css
+++ b/public/css/info.css
@@ -556,6 +556,7 @@ button#logout-btn.logout-btn{
    width: 90%;
    height: 50px;
    font-size: 20px;
+   margin-top: -75px;
 }
 
 button#back-btn.back-btn{
