--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -56,22 +56,10 @@
 <body>
 	</form>
 	<div class="card">
-	  <img class="img-responsive" id="photo" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_1280.png" alt="Avatar" style="width:100%; max-height: 100%;">
+	  <img class="img-responsive" id="photo" src ="images/avatar.png" alt="Avatar" style="width:100%; max-height: 100%;">
 	  <div class="container-1">
 	    <h1 id="name" style="text-align: center;"><b>Name</b></h1> 
 	  </div>
-	</div>
-	<div class="row">
-		<div class="column left">
-			<h2 class="facebookLogin">
-				Connect with Facebook &amp; Create a Profile!
-			</h2>
-		</div>
-
-<!-- 		<div class="column right">
-			<fb:login-button class="facebookLogin" scope="public_profile,email" onlogin="checkLoginState();">
-			</fb:login-button>
-		</div> -->
 	</div>
 	<!-- <div class="userbackbtn">
 		<button class="btn" onclick="submitClicked()" id="submit">Back</button>
