--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Google Analytics Content Experiment code -->
-	<script>function utmx_section(){}function utmx(){}(function(){var
+<!-- 	<script>function utmx_section(){}function utmx(){}(function(){var
 	k='170665669-0',d=document,l=d.location,c=d.cookie;
 	if(l.search.indexOf('utm_expid='+k)>0)return;
 	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
@@ -13,18 +13,18 @@
 	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
 	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-	</script><script>utmx('url','A/B');</script>
+	</script><script>utmx('url','A/B');</script> -->
 	<!-- End of Google Analytics Content Experiment code -->
 
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114946810-1"></script>
-<script>
+<!-- <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-114946810-1');
-</script>
+</script> -->
 
 	<title>Timer</title>	
 	<meta charset="utf-8">
