--- a/views/library.handlebars
+++ b/views/library.handlebars
@@ -1,7 +1,7 @@
 <html>
 <head>
 <!-- Google Analytics Content Experiment code -->
-	<script>function utmx_section(){}function utmx(){}(function(){var
+<!-- 	<script>function utmx_section(){}function utmx(){}(function(){var
 	k='170665669-1',d=document,l=d.location,c=d.cookie;
 	if(l.search.indexOf('utm_expid='+k)>0)return;
 	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
@@ -14,7 +14,7 @@
 	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
 	</script><script>utmx('url','A/B');</script>
 	<!-- End of Google Analytics Content Experiment code -->
-<script>
+<!-- <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -22,7 +22,7 @@
 
 	ga('create', 'UA-114946810-1', 'auto');
 	ga('send', 'pageview');
-	</script>
+	</script> --> 
 	
 	<title>Flex</title>	
 	<meta charset="utf-8">
@@ -184,7 +184,7 @@
 	function addWorkout(val) {
 		//gtag('create', 'UA-114946810-1', 'auto');
 		//gtag('send', 'event', 'add', 'click');
-		ga('send', 'event','add', 'click');
+		//ga('send', 'event','add', 'click');
 		document.getElementById("libraryForm").submit();
 	}
 	function startWorkout() {
