login and css changes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,6 +43,7 @@
 	<body>
 
 		<div class="form-group">
+			<center><img src ="images/login.png" class="img-responsive" id="login-photo" alt="Step 6"></center>
 		  <label for="usr">Username:</label>
 		  <input type="user" class="form-control" id="usr">
 
