--- a/views/tutorial.handlebars
+++ b/views/tutorial.handlebars
@@ -135,6 +135,9 @@
 		<p class="exercise">Start the workout.</p>
 		<center><img src ="images/66.png" class="img-responsive" id="step-photo" alt="Step 6"></center>
 		<br></br>
+		<a href="/library">
+			<center><button type="button" class="library-btn" id="library-btn" onclick="library()">Library</button></center>
+		</a>
 		</div>
 	  </div>
 	</div>
@@ -155,6 +158,9 @@
 	}
 	function tutorial() {
 		location.href = "/tutorial"
+	}
+	function library() {
+		location.href = "/library"
 	}
 	function refresh() {
 		location.href = "/tutorial"
