--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -845,7 +845,7 @@ h3{
     margin-bottom: 15px;
     font-weight: bold;
     color: #2579FF;
-    border: 2px solid #2579ff;
+    border: 2px dotted #2579ff;
     padding: 10px;
     margin-right: 15px;
 }
