--- a/public/css/index.css
+++ b/public/css/index.css
@@ -662,7 +662,7 @@ h2{
     font-family: 'Space Mono', monospace;
     font-size: 2em;
     color: #2186F7;
-    border: #2186F7 2px solid;
+    border: #2186F7 2px dotted;
     margin-left: 20px;
     margin-right: 20px;
     padding: 8px;
