--- a/public/css/tutorial.css
+++ b/public/css/tutorial.css
@@ -592,3 +592,14 @@ div.container-1 {
   margin-top: 10px;
   border: 2px solid #00BCD4;
 }
+
+#library-btn{
+   background: linear-gradient(#00BCD4, #2979FF);
+   color: white;
+   width: 90%;
+   height: 50px;
+   margin-bottom: 25px;
+   margin-top: -20px;
+   font-size: 20px;
+   border-style: none;
+}
