--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Karla');
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
      margin-top: 2em;
