--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Karla');
+
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
      margin-top: 2em;
@@ -792,4 +794,8 @@ div.form-group{
     margin-top: 25px;
     margin-bottom: 20px;
     margin-right: 15px;
+}
+
+.userfont{
+    font-family: 'Karla';
 }
