--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,15 +44,17 @@
 
 		<div class="form-group">
 			<center><img src ="images/login.png" class="img-responsive" id="login-photo" alt="Step 6"></center>
-		  <label for="usr">Username:</label>
-		  <input type="user" class="form-control" id="usr">
+		  	<!-- <div class="userfont"> -->
+			  <label for="usr">Username:</label>
+			  <input type="user" class="form-control" id="usr">
 
 
-		  <label for="pwd">Password:</label>
-		  <input type="password" class="form-control" id="pwd">
-		  <br/>
+			  <label for="pwd">Password:</label>
+			  <input type="password" class="form-control" id="pwd">
+			  <br/>
+	<!-- 		</div> -->
 
-		  <button class="btn" onclick="submitClicked()" id="submit">Submit</button>
+		  <button class="btn" onclick="submitClicked()" id="submit">Log In</button>
 		  <br></br>
 		  <br>
 			<fb:login-button scope="public_profile,email" onlogin="window.location='/library'">
