--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -28,7 +28,9 @@
 
 		<div class="form-group">
 		  <h5 id="acctsaved">Account Saved!</h5>
-		  <label >New Account</label> </br>
+		  <div id="accnt">
+		  	<label>New Account</label>
+		  </div>
 		  <label for="usr">New Username:</label>
 		  <input type="user" class="form-control" id="newusr">
 
