--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,28 +42,15 @@
 	<body>
 
 		<div class="form-group">
-
-			<center><img src ="images/login.png" class="img-responsive" id="login-photo" alt="Step 6"></center>
-		  	<!-- <div class="userfont"> -->
-			  <label for="usr">Username:</label>
-			  <input type="user" class="form-control" id="usr">
-=======
 		  <center><img src ="images/login.png" class="img-responsive" id="login-photo" alt="Step 6"></center>
-		  <h5 id="incorrectpwd">Username or password incorrect! Please re-enter or sign-up below.</h5>
+		  <h5 id="incorrectpwd">Username or Password Incorrect! <br>Please Re-enter or Sign-up Below.</h5>
 		  <label for="usr">Username:</label>
 		  <input type="user" class="form-control" id="usr">
-
-
-
-			  <label for="pwd">Password:</label>
-			  <input type="password" class="form-control" id="pwd">
-			  <br/>
-	<!-- 		</div> -->
-
-
+		  <label for="pwd">Password:</label>
+		  <input type="password" class="form-control" id="pwd">
+		<br/>
 		  <button class="btn" onclick="submitClicked()" id="submit">Log In</button>
 
-		  <button class="btn" onclick="submitClicked()" id="submit">Submit</button>
 		  <button class="btn" onclick="signup()" id="signup">Sign-Up</button>
 
 		  <br></br>
@@ -71,10 +58,6 @@
 			<fb:login-button scope="public_profile,email" onlogin="window.location='/library'">
 			</fb:login-button>
 		</div>
-
-		 <!--  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"
-		  onclick="submitFBClicked()" id="submit" >
-		</fb:login-button> -->
 		</br>
 
 
