change styling on login page

--- a/views/custom.handlebars
+++ b/views/custom.handlebars
@@ -92,7 +92,7 @@
 		<button type="button" style="display: none" id="timerButtonStartOver" onclick="startover()" class="btn btn-secondary btn-lg">Restart</button>
 		{{/if}}
 		<button type="button" id="timerButtonPause" onclick="pause()" class="btn btn-secondary btn-lg">Pause</button>
-		<button type="button" id="timerButtonPlay" onclick="play()" style="display:none" class="btn btn-secondary btn-lg">Play</button>
+		<button type="button" id="timerButtonPlay" onclick="play()" style="display:none" class="btn btn-secondary btn-lg">Resume</button>
 		<br>
 		<button type="button" id="timerButtonCancel" onclick="cancel()" class="btn btn-secondary btn-lg">Cancel</button>
 	</div>
