--- a/public/css/login.css
+++ b/public/css/login.css
@@ -496,18 +496,33 @@ button#submit.btn{
     background: linear-gradient(to right, #00BDD6 , #2579FF);
     color: #ffffff;
     border: #651fff 2px solid;  
+    border-radius: 10px;
     font-size: 16px;
     border: none;
+    box-shadow: 0px 2px 3px 0px #00000020;
 }
 
 button#signup.btn{
-    width: 90%;
+  /*  width: 90%;
     height: 40px;
     background: linear-gradient(to right, #00BDD6 , #2579FF);
     color: white;
     border: #651fff 2px solid;  
     font-size: 16px;
-    border: none;
+    border: none;*/
+     width: 90%;
+    height: 40px;
+    font-size: 16px;
+    /*color: #ffffff;*/
+/*    background-color: #651fff;*/
+    border: 2px solid #2186F7;
+    border-radius: 10px;
+    box-shadow: 0px 2px 3px 0px #00000020;
+    /*margin-right: 10px;*/
+    /*margin-top:10px;*/
+    background: #ffffff;
+    color: #2186F7;
+
 }
 
 input#usr.form-control{
